# tenmillioncheckboxes

./: .dockerignore  Dockerfile  fly copy.toml  fly.toml  package.json  pnpm-lock.yaml  turbo.json
apps/web/: package.json  tailwind.config.js
apps/web-server/: Cargo.toml  Dockerfile  fly.toml
apps/web-server/src/: main.rs
apps/web/app/: checkbox-list.tsx  globals.css  layout.tsx  page.tsx
