[package]
name = "web-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
tokio-tungstenite = "0.23.1"
redis = { version = "0.25.4", features = [
    "aio",
    "tokio-comp",
    "connection-manager",
] }
futures = "0.3.30"
futures-util = "0.3.30"
env_logger = "0.11.3"
log = "0.4.21"
serde = { version = "1.0.203", features = ["derive"] }
dotenv = "0.15.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
